<resources>
    <string name="app_name">TOTM</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="newItem">New Item</string>
    <string name="settings">Settings</string>
    <string name="newPlans">New Plans?</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="reminder">Reminder</string>
    <string name="alarm">Alarm</string>
    <string name="whatday">What Day?</string>
    <string name="whattime">What Time?</string>
    <string name="newEvent">Create Event</string>


    <!-- AT's string resources -->
    <string name="school">School</string>
    <string name="errands">Errands</string>
    <string name="phone_calls">Phone Calls</string>
    <string name="other">Other</string>
    <string name="completed">Completed</string>
    <string name="todays_date"></string>
    <string name="view_mode">View Mode</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="what_is_it">What is it?</string>
    <string name="category">Category?</string>
    <string name="task_name">Task Name</string>
    <string name="complete_checked_tasks">Remove Checked Tasks</string>

    <string-array name="dropdown_categories">
        <item>School</item>
        <item>Errand</item>
        <item>Phone Call</item>
        <item>Other</item>
        <item>New Category</item>
    </string-array>
    <string-array name="select_array">
        <item>Select…</item>
    </string-array>

    <string-array name="working_array"></string-array>

    <string-array name="dropdown_reminder_times">
        <item>When?</item>
        <item>At Time of Event</item>
        <item>Hour Before</item>
        <item>2 Hours Before</item>
        <item>Day Before</item>
    </string-array>

    <string-array name="dropdown_alarm_times">
        <item>When?</item>
        <item>At Time of Event</item>
        <item>30 Minutes Before</item>
        <item>Hour Before</item>
        <item>Two Hours Before</item>
    </string-array>

    <!-- Parker's string resources -->
    <string name="title_activity_settings">Settings</string>
    <string name="disable_notification">Disable Notifications</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="toggle_feedback">Send Us Feedback</string>
    <string name="clear_events">Clear All Events</string>
    <string name="select">Select...</string>
    <string name="dismiss">Dismiss</string>


</resources>
