<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLight"
    tools:context=".Today_Fragment">

    <RelativeLayout
        android:id="@+id/today_master_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_10_dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/alegreya_bold"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/common_30_dp"
            android:layout_marginEnd="@dimen/common_30_dp"
            android:layout_height="1dp"
            android:layout_below="@id/title_textview"
            android:background="@android:color/black" />

        <android.support.v7.widget.CardView
            android:layout_below="@id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/common_10_dp">

            <ScrollView
                android:id="@+id/master_scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title_textview">

                <RelativeLayout
                    android:id="@+id/inner_card_master_relative"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/school_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/school"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:id="@+id/school_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/school_textview">

                        <TableRow>

                            <CheckBox />

                            <TextView
                                android:fontFamily="@font/alegreya"
                                android:text="School Table Layout"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/school_table"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/errands_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line2"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/errands"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:id="@+id/errands_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/errands_textview">

                        <TableRow>

                            <CheckBox />

                            <TextView
                                android:fontFamily="@font/alegreya"
                                android:text="Errands Table Layout"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                    <View
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/errands_table"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/phone_calls_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line3"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/phone_calls"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:id="@+id/phone_calls_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phone_calls_textview">

                        <TableRow>

                            <CheckBox />

                            <TextView
                                android:fontFamily="@font/alegreya"
                                android:text="Phone Calls Table Layout"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                    <View
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/phone_calls_table"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/other_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phone_calls_table"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/other"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TableLayout
                        android:id="@+id/other_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/other_textview">

                        <TableRow>

                            <CheckBox />

                            <TextView
                                android:fontFamily="@font/alegreya"
                                android:text="Other Table Layout"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                    <View
                        android:id="@+id/line5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/other_table"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/completed_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/other_table"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/alegreya_bold"
                        android:text="@string/completed"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />


                    <TableLayout
                        android:id="@+id/completed_table"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/completed_textview">

                        <TableRow>

                            <CheckBox />

                            <TextView
                                android:fontFamily="@font/alegreya"
                                android:text="Other Table Layout"
                                android:textColor="@color/black"
                                android:textSize="20sp" />
                        </TableRow>
                    </TableLayout>

                    <!--<View-->
                        <!--android:id="@+id/line6"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:layout_below="@id/completed_table"-->
                        <!--android:background="@android:color/black" />-->

                </RelativeLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>